frontend/src/styles.scss
:root {
  --gameboyColor: #f2ae00;
  --gameboyMaxWidth: 768px;
  --displayMargin: 2rem;
}

html {
  background: bisque;
}

body {
  margin: 0;
  overflow: hidden;
  color: white;
  text-align: center;
  box-sizing: border-box;
  background: transparent;
}

iframe {
  pointer-events: auto;
}

.sepia {
  -webkit-filter: sepia(20%);
  -moz-filter: sepia(20%);
  -ms-filter: sepia(20%);
  filter: sepia(20%)
}

h1 {
  position: absolute;
  width: 100%;
  z-index: 1;
  font-size: 1.5rem;
}

a {
  color: white;
}

a:hover {
  color: purple;
}

canvas {
  max-width: 100%;
  max-height: 100%;
}

#scene-container {
  position: absolute;
  width: 100%;
  height: 100%;
}

h1 {
  font-size: 6.2rem;
}

.popup {
  cursor: pointer;
  position: fixed;
  top: 1rem;
  right: 1rem;
  background: var(--gameboyColor);
  font-family: Roboto, sans-serif;
  color: #000;
  padding: 0.6em 1.3em;
  font-weight: 900;
  font-size: 2rem;
  border: 3px solid black;
  border-radius: 0.4em;
  box-shadow: 0.1em 0.1em;
}

.popup:hover {
  transform: translate(-0.05em, -0.05em);
  box-shadow: 0.15em 0.15em;
}

.popup:active {
  transform: translate(0.05em, 0.05em);
  box-shadow: 0.05em 0.05em;
}

.info-banner {
  position: absolute;
  bottom: 0;
  background: rgba(113, 155, 175, 0.7);
  border-top: 0.5rem solid #2c313e;
  border-radius: 10px;
  font-family: monospace, sans-serif;
  color: white;
  transition: 1s;
  width: 100%;
  z-index: 10;
  transform: translateY(100%);

  .title {
    background: rgba(113, 155, 175, 0.7);
    padding: 0.4rem;

  }

  .content {
    padding: 0.4rem;

  }
}

.gameboy {
  z-index: 10;
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100%;
  max-width: 768px;
  margin-right: auto;
  margin-left: auto;
  height: 100%; //fallback
  height: calc(var(--vh, 1vh) * 100);
  pointer-events: none;
  overflow: hidden;
  border-left: 3px solid #2c313e;
  border-right: 3px solid #2c313e;

}

.controls {
  position: relative;
  width: 100%;
  box-sizing: border-box;
  padding: 3rem 3rem;
  display: flex;
  justify-content: space-between;
  pointer-events: auto;

  background: var(--gameboyColor);
}

.dpad {
  background: transparent;
  position: relative;
  display: inline-block;
  width: 10rem;
  height: 10rem;
  z-index: 5;
  font-size: 3rem;
  line-height: 7rem;

  > * {
    width: 33%;
    height: 33%;
    position: absolute;
    background-color: #565e6a;
    cursor: pointer;

    i {
      position: relative;
      display: block;
      margin: 0 auto;
      text-align: center;
      height: 100%;
      color: #333a4a;
      text-shadow: 0px -0.5px 0px #aaa;
    }
  }

  .up {
    top: calc(0% + 4px);
    left: 33%;
    border-top: 4px solid black;
    border-left: 4px solid black;
    border-right: 4px solid black;
    border-radius: 5px 5px 0px 0px;

    &:active {
      background: linear-gradient(to top, #565e6a 0%, #333 100%);
    }

    i {
      top: -5px;
    }
  }

  .right {
    top: 33%;
    left: calc(66% - 4px);
    border-top: 4px solid black;
    border-bottom: 4px solid black;
    border-right: 4px solid black;
    border-radius: 0px 5px 5px 0px;
    box-shadow: 0px -2px 0px #888 inset;

    &:active {
      background: linear-gradient(to right, #565e6a 0%, #333 100%);
    }

    i {
      top: -5px;
    }
  }

  .down {
    top: calc(66% - 4px);
    left: 33%;
    border-left: 4px solid black;
    border-bottom: 4px solid black;
    border-right: 4px solid black;
    border-radius: 0px 0px 5px 5px;
    box-shadow: 0px -2px 0px #888 inset;

    &:active {
      background: linear-gradient(to bottom, #565e6a 0%, #333 100%);
    }
  }

  .left {
    top: 33%;
    left: calc(0% + 4px);
    border-top: 4px solid black;
    border-bottom: 4px solid black;
    border-left: 4px solid black;
    border-radius: 5px 0px 0px 5px;
    box-shadow: 0px -2px 0px #888 inset;

    i {
      top: -5px;
    }

    &:active {
      background: linear-gradient(to left, #565e6a 0%, #333 100%);
    }
  }

  .middle {
    top: 33%;
    left: 33%;
    z-index: -5;

    &::after {
      content: '';
      position: absolute;
      top: 20%;
      left: 20%;
      display: inline-block;
      border: 1px solid #6e737a;
      background: linear-gradient(to bottom, #6d7075 0%, #6d7075 30%, #23272f 70%, #23272f 100%);
      border-radius: 50%;
      height: 60%;
      width: 60%;
    }
  }

  .up-down {
    background-color: #565e6a;
    border: 4px solid black;
    border-radius: 5px;
    width: 20px;
    height: 60px;
  }

  .left-right {
    background-color: #565e6a;
    border: 4px solid black;
    border-radius: 5px;
    width: 60px;
    height: 20px;
  }
}

.display-wrapper {
  box-sizing: border-box;
  border: var(--displayMargin) solid var(--gameboyColor);
  box-shadow: 0 0 0 10rem var(--gameboyColor);
  border-radius: 6rem;
  height: 100%;
  pointer-events: none;
}

.display {
  box-sizing: border-box;
  position: relative;
  border: var(--displayMargin) solid #23252d;
  border-radius: 4rem;
  border-bottom: 4rem solid #23252d;
  height: 100%;
  pointer-events: none;
  overflow: hidden;

  &::before {
    content: '';
    display: block;
    position: absolute;
    top: calc(100% + 2rem);
    left: 5px;
    width: calc(100% - 10px);
    height: 3rem;
    border-radius: 50%;
    background-color: #23252d;
  }

}

.header {
  position: absolute;
  display: flex;
  justify-content: center;
  margin-top: -3.5rem;
  width: calc(100% - var(--displayMargin)*2);
  svg {
    display: block;
    height: 2.5rem;
  }
}


.a-b {
  margin-top: auto;
  margin-bottom: auto;
  display: flex;
  font-family: sans-serif;

  .a, .b {
    margin: 0.5rem;

    padding: 0;
    position: relative;
    font-size: 3rem;
    line-height: 5rem;
    width: 5rem;
    height: 5rem;
    border-radius: 50%;
    background-color: #2c313e;
    border: 0;
    border-bottom: 0.25rem solid #888;
    box-shadow: -0.125rem 0.125rem 10px black, 0px 0px 0.75rem black inset;
    text-shadow: 0px -0.125rem 0.125rem #888;
    color: #2c313e;
    text-align: center;
    -webkit-user-select: none;
    cursor: pointer;

    &:active > span {
      display: block;
      transform: translateY(3px);
    }

    &:active {
      box-shadow: -0.125rem 0.125rem 0.125rem black, 0px 0px 0.75rem black inset;
      border-width: 0;

    }
  }

  .a {
    top: -15px;
  }

  .b {
    margin-right: 1rem;
    top: 15px;
  }
}

